fix nodes modal being cutoff

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -159,7 +159,8 @@ textarea {
   padding: 0;
   border: 1px solid #888;
   width: 80%;
-  height: 100%;
+  min-height: 75%;
+  height: auto;
   overflow: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
